# hermes-toolkit

./: .gitignore  CHANGELOG.md  DOCTOR_CHECKLIST.md  LICENSE  README.md  ROADMAP.md  UI_REFRESH_CHECKLIST.md  hermes-settings  hermes-toolkit-web.service  install.sh  pyproject.toml  requirements.txt
docs/: models.md  profiles.md  troubleshooting.md
docs/assets/screenshots/: README.md
docs/releases/: v0.3.0-alpha.md
tests/: test_about_page.py  test_backup_page.py  test_config.py  test_cost.py  test_dashboard.py  test_doctor.py  test_home_assistant_page.py  test_jobs_page.py  test_logs_page.py  test_memory_page.py  test_models.py  test_models_page.py  test_release_status.py  test_sessions.py  test_skills_page.py  test_system_page.py  test_telegram_page.py  test_update_page.py  test_version.py
toolkit/: about_page.py  backup_page.py  cli.py  config.py  cost.py  dashboard.py  doctor.py  home_assistant_page.py  jobs_page.py  logs.py  logs_page.py  memory_page.py  models.py  models_page.py  profiles.py  release_status.py  sessions.py  skills_page.py  status.py  system_page.py  telegram_page.py  update_page.py  web.py
toolkit/static/css/: main.css
toolkit/static/js/: analytics.js  theme.js
toolkit/templates/: about.html  analytics.html  backup.html  base.html  configuration.html  cost.html  dashboard.html  doctor.html  home_assistant.html  jobs.html  logs.html  memory.html  models.html  sessions.html  skills.html  system.html  telegram.html  updates.html
