[project]
name = "hermes-toolkit"
version = "0.7.0-alpha"
description = "Administrative toolkit for Hermes Agent configuration, model switching, and usage monitoring."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML",
]

[project.scripts]
hermes-toolkit = "toolkit.cli:main"
hermes-settings = "toolkit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
